# hydra

./: .gitignore  Cargo.toml  README.md  grammar.md
cli/: Cargo.toml
cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/lexer/src/: lexer.rs  lib.rs  token.rs
crates/parser/src/: ast.rs  lib.rs  parser.rs  type_check.rs
hydra-lang/: Cargo.toml
hydra-lang/src/: lib.rs  main.rs
hydra-lang/src/hydrac/parse/lexer/: lexer.rs  token.rs
hydra-lang/src/hydrac/parse/parser/: ast.rs
hydra-lang/tests/: test.hydra  test.tokens
